--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js",
-    "watch": "tsc --watch",
-    "build": "tsc",
+    "watch": "yarn tsc --watch",
+    "build": "yarn tsc",
     "clean": "rm -rf build/"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/sqlite3": "^3.1.6",
     "@types/ws": "^7.2.5",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "typescript": "^3.9.5"
   }
 }
