--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocket-league-mafia-bot",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -10,12 +10,16 @@
     "clean": "rm -rf build/",
     "rebuild": "yarn clean && yarn build"
   },
+  "devDependencies": {
+    "@types/ws": "^7.2.5"
+  },
   "dependencies": {
     "@types/node": "^14.0.11",
     "@types/sqlite3": "^3.1.6",
     "@types/ws": "^7.2.5",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "tsyringe": "^4.3.0",
     "typescript": "^3.9.5"
   }
 }
