--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocket-league-mafia-bot",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -14,11 +14,13 @@
     "@types/ws": "^7.2.5"
   },
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.0.11",
     "@types/sqlite3": "^3.1.6",
     "@types/ws": "^7.2.5",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "moment": "^2.27.0",
     "tsyringe": "^4.3.0",
     "typescript": "^3.9.5"
   }
