--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocket-league-mafia-bot",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -8,10 +8,14 @@
     "watch": "yarn tsc --watch",
     "build": "yarn tsc",
     "clean": "rm -rf build/",
-    "rebuild": "yarn clean && yarn build"
+    "rebuild": "yarn clean && yarn build",
+    "eslint": "eslint 'src/**/*.ts'"
   },
   "devDependencies": {
-    "@types/ws": "^7.2.5"
+    "@types/ws": "^7.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0"
   },
   "dependencies": {
     "@types/node": "^14.0.11",
