License field on package.json
Changed license field on package.json to follow the LICENSE file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rocket-league-mafia-bot",
   "version": "1.2.5",
   "main": "index.js",
-  "license": "MIT",
+  "license": "WTFPL",
   "scripts": {
     "start": "node build/index.js",
     "watch": "yarn tsc --watch",
