--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "eslint": "eslint 'src/**/*.ts'"
   },
   "devDependencies": {
+    "@types/node": "^14.0.11",
     "@types/ws": "^7.2.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.9.0"
+    "eslint": "^7.9.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/node": "^14.0.11",
-    "@types/sqlite3": "^3.1.6",
-    "@types/ws": "^7.2.5",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "moment": "^2.27.0",
-    "tsyringe": "^4.3.0",
-    "typescript": "^3.9.5"
+    "tsyringe": "^4.3.0"
   }
 }
