--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "WTFPL",
   "scripts": {
     "start": "node build/index.js",
-    "watch": "yarn tsc --watch",
-    "build": "yarn tsc",
+    "watch": "tsc --watch",
+    "build": "tsc",
     "clean": "rm -rf build/",
-    "rebuild": "yarn clean && yarn build",
-    "eslint": "eslint 'src/**/*.ts'"
+    "rebuild": "npm run clean && npm run build",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/node": "^14.0.11",
@@ -17,6 +17,9 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
